# geodef

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPATIBILITY.md  LICENSE  PLAN.md  PYTHON.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_greens.py  run.py
docs/: api_stability.md  backend.md  bayes.md  cache.md  conventions.md  data.md  euler.md  fault.md  geomap.md  geometry.md  glossary.md  gradients.md  greens.md  index.md  invert.md  medium.md  mesh.md  okada.md  overview_examples_and_notebooks.md  overview_greens_and_geometry.md  overview_stress_shadows.md  plot.md  quickstart.md  slip.md  transforms.md  usability.md  validation.md  workflow.md
examples/: 01_forward_model.ipynb  02_caching.ipynb  03_plotting.ipynb  04_mesh_generation.ipynb  README.md  bayesian_geometry.ipynb  mesh_generation.ipynb
examples/gorkha_earthquake/: model_gorkha.ipynb  setup_data.ipynb
examples/gorkha_earthquake/data/: 20150425Nepal_ARIA_Final_Offsets_v4.txt  varres_T048_insar.txt
examples/gorkha_earthquake/fault/: qiu+15_geo.ned  qiu+15_geo.tri
geometry/: demo_greens_functions.ipynb
geometry/okada/: computeOkada92.m  dc3d.f90  dc3d0.f90  okada_utils.py  test_DC3D.py  test_okada85.py  test_okada92.m  test_okada92.py  test_okada_wrapper.py
geometry/tdcalc/: run_tdcalc.ipynb
plans/: ARCHITECTURE.md  CAPABILITIES.md  FEATURES.md  PHASE3_INTERNALS.md  PHASE4_SCALE.md  PHASE5_INFERENCE.md  PHASE6_PHYSICS.md
related/shakeout_v2/: compare_slip_models.py  euler_calc.py  fault_model.py  fault_plots.py  mentawai_slipmodel.py  okada_greens.py  sf_slipmodel.py  shakeout.py  shakeout_mcmc.py  shakeout_sim.py  slip_model.py  test.py  test_faultmodel.py  test_faultplots.py  test_geod.py  test_geod_transform.py  test_laplacian.py  test_type_scratch.py
related/shakeout_v2/notebooks/: 00_setup_and_data_overview.ipynb  01_least_squares_from_mean.ipynb  02_line_fitting_and_design_matrix.ipynb  03_okada_forward_model_single_fault.ipynb  04_fault_discretization_and_G_matrix.ipynb  05_regularization_ridge_and_smoothing.ipynb  06_choosing_regularization_parameter.ipynb  07_weighted_least_squares_multiple_datasets.ipynb  07b_gnss_insar_correlated_noise.ipynb  08_nonlinear_inversion_scipy_and_mcmc.ipynb
src/geodef/: __init__.py  _engines.py  _fault_io.py  backend.py  bayes.py  cache.py  data.py  euler.py  fault.py  geomap.py  geometry.py  gradients.py  greens.py  invert.py  medium.py  mesh.py  okada.py  okada85.py  okada92.py  plot.py  slip.py  transforms.py  tri.py  validation.py
src/geodef/bayes/: __init__.py  _collapsed.py  _diagnostics.py  _sampling.py  _slip.py  _triwarp.py  _util.py
src/geodef/invert/: __init__.py  _assessment.py  _geometry.py  _io.py  _regularization.py  _results.py  _selection.py  _solvers.py  _system.py
src/geodef/plot/: __init__.py  _assessment_plots.py  _data_plots.py  _fault_plots.py  _fit_plots.py  _shared.py
tests/: conftest.py  extract_mat_data.py  test_backend.py  test_backend_kernels.py  test_bayes.py  test_bayes_slip.py  test_bayes_tri.py  test_benchmarks.py  test_cache.py  test_conventions.py  test_cross_validation.py  test_data.py  test_data_functions.py  test_docs.py  test_engines.py  test_euler.py  test_examples.py  test_fault.py  test_geomap.py  test_geometry.py  test_geometry_search.py  test_gradients.py  test_greens.py  test_greens_integration.py  test_invert.py  test_layering.py  test_linear_system.py  test_medium.py  test_mesh.py  test_okada85.py  test_okada92.py  test_package.py  test_plot.py  test_properties.py  test_public_api.py  test_result_functions.py  test_result_io.py  test_slip.py  test_tdcalc.py  test_transforms.py  (+2 more)
tests/reference_data/: FS_complex.npz  FS_simple.npz  HS_complex.npz  HS_simple.npz  okada92_scalar_golden.npz  presplit_result.manifest.json  presplit_result.npz  public_surface.json
tutorials/: 00_preflight.ipynb  01_forward_model.ipynb  02_discretization_and_g_matrix.ipynb  03_plotting.ipynb  03_unregularized_inversion.ipynb  04_mesh_generation.ipynb  04_regularization.ipynb  05_choosing_regularization.ipynb  05_multiple_datasets.ipynb  06_correlated_noise.ipynb  06_multiple_datasets.ipynb  07_bounds_and_constraints.ipynb  07_correlated_noise.ipynb  08_bounds_and_constraints.ipynb  08_uncertainty_and_resolution.ipynb  09_nonlinear_geometry.ipynb  09_uncertainty_and_resolution.ipynb  10_gradient_geometry.ipynb  10_nonlinear_geometry.ipynb  11_gradient_geometry.ipynb  11_triangular_faults.ipynb  12_interseismic_coupling.ipynb  13_model_misspecification.ipynb  14_bayesian_inversion.ipynb  OUTLINE.md  README.md  old_01_forward_model.ipynb  old_02_caching.ipynb  old_04_mesh_generation.ipynb  reference_plots.ipynb
tutorials/solutions/: 00_preflight_solutions.ipynb  01_forward_model_solutions.ipynb  02_discretization_and_g_matrix_solutions.ipynb  03_unregularized_inversion_solutions.ipynb  04_regularization_solutions.ipynb  05_multiple_datasets_solutions.ipynb  06_correlated_noise_solutions.ipynb  07_bounds_and_constraints_solutions.ipynb  08_uncertainty_and_resolution_solutions.ipynb  09_nonlinear_geometry_solutions.ipynb  10_gradient_geometry_solutions.ipynb  11_triangular_faults_solutions.ipynb  12_interseismic_coupling_solutions.ipynb  13_model_misspecification_solutions.ipynb  14_bayesian_inversion_solutions.ipynb
