[project]
name = "geodef"
version = "0.1.0"
description = "A flexible, student-friendly Python library for forward and inverse modeling of fault slip in elastic half-spaces"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geodef"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "ipykernel",
    "ipywidgets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
