[project]
name = "geodef"
dynamic = ["version"]
description = "A flexible, student-friendly Python library for forward and inverse modeling of fault slip in elastic half-spaces"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Eric Lindsey", email = "eric.o.lindsey@gmail.com" },
]
requires-python = ">=3.10"
keywords = [
    "geodesy",
    "earthquake",
    "fault slip",
    "elastic dislocation",
    "inverse problems",
    "okada",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/ericlindsey/geodef"
Issues = "https://github.com/ericlindsey/geodef/issues"

[project.optional-dependencies]
# Geographic transforms and slab2.0 sampling.
geo = ["pyproj"]
# Triangular mesh generation from traces, polygons, point clouds, and
# slab2.0 grids (netCDF4 reads the .grd files).
mesh = ["meshpy", "netCDF4"]
# Cartopy-backed geographic map plotting (coastlines, borders, topography).
maps = ["cartopy"]
# JAX backend: XLA-compiled (and GPU-capable) kernels with autodiff.
jax = ["jax"]
# Bayesian sampling: NUTS via blackjax on the JAX backend.
bayes = ["jax", "blackjax"]
# Everything optional at once, for a full research install.
all = ["pyproj", "meshpy", "netCDF4", "cartopy", "jax", "blackjax"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/geodef/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/geodef"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "nbclient>=0.9",
    "nbformat>=5.9",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: expensive compilation, sampling, or end-to-end recovery tests",
]
filterwarnings = [
    # Emitted by compiled extensions (e.g. netCDF4) built against a different
    # NumPy ABI than the one installed; harmless and outside geodef's control.
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.ruff]
line-length = 88
# Lint scope is the package and its tests only. Notebooks, reference code under
# related/, and the original Green's-function sources under geometry/ are
# intentionally excluded from routine linting.
extend-exclude = [
    "*.ipynb",
    "related",
    "geometry",
    "tutorials",
    "examples",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
# The numerical-engine ports below stay laid out line-by-line against their
# published references; the formatter would reflow them and break that
# correspondence.
exclude = [
    "src/geodef/okada85.py",
    "src/geodef/okada92.py",
    "src/geodef/tri.py",
]

[tool.ruff.lint.per-file-ignores]
# The Okada (1985) / DC3D (Okada 1992) and triangular-dislocation (Nikkhoo &
# Walter 2015) engines are faithful ports of published Fortran/MATLAB. They
# keep the original variable names (e.g. `I` for the Okada I-integrals) and
# line layout so the code can be checked against the reference; a few
# intermediates mirror the source without being read back.
"src/geodef/okada85.py" = ["E741", "E501", "W291", "W293"]
"src/geodef/okada92.py" = ["E741", "F841", "E501", "W291", "W293"]
"src/geodef/tri.py" = ["E501", "W291", "W293"]

[tool.mypy]
python_version = "3.10"
# numpy reductions and elementwise ops are typed as returning Any, so
# warn_return_any floods a numeric library with false positives; leave it off.
warn_return_any = false
warn_unused_configs = true
files = ["src/geodef"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pyproj.*",
    "meshpy.*",
    "mpl_toolkits.*",
    "netCDF4",
    "cartopy.*",
    "blackjax.*",
]
ignore_missing_imports = true
